npcalc.css
<style type="text/css">
.npcalcHeader {
	font-weight:bold;
	color:#cc6600;
	font-size:14px;
}

.npcalcLabel {
	float: left;
	width:170px;
	font-weight:bold;
}

.npcalcHidden {
	display:none;
}

.npcalcDisclaimer {
	margin-top: 0px;
	margin-right: 8px;
	margin-bottom: 20px;
	width: 480px;
	font-family: Arial;
	font-weight: normal;
	font-size: 11px;
	text-align: left;
}

#dv_npc_s1_t {
	display: none;
}

#dv_npc_s2_t {
	display: none;
}

#dv_npc_s3_t {
	display: none;
}

#dv_npc_s4_t {
	display: none;
}

#dv_npc_s5_t {
	display: none;
}

#dv_npc_s6_t {
	display: none;
}

#s_step5 {
	display: none;
}

#s_step6 {
	display: none;
}

#dv_npc_s6_program {
	display: none;
}

#tr_requiredliveoncampus {
	display: none;
}

.npcalcLeftColumn {
	margin: 0px;
	display: inline-block;
	border: 0px solid black;
	vertical-align: top;
	width: 175px;
}

.npcalcRightColumn {
	margin: 0px;
	display: inline-block;
	border: 0px solid green;
	vertical-align: top;
}

.npcalcLeftColumnSummaryPage {
	margin: 0px;
	display: inline-block;
	border: 0px solid black;
	vertical-align: top;
	width: 400px;
}
.npcalcContainer {

}

.npcalcShaded {
	background-color: #E0E0E0;
}
</style>

